# nunchi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  eval.yml  live-smoke.yml  release.yml
.specify/: feature.json  integration.json  speckit-lock.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
docs/: INSTALL.md  STABILITY.md  adapters-v2.md  adapters.md  integration.md  product-surface-v2.md  v2-completion-goal.md  v2-delivery.md
evals/: __init__.py
evidence/: README.md
examples/: generic_host_demo.py  loader-snippet.md  read_the_room_demo.py
scripts/: check_governance.py  check_slice020_secrets.py  check_slice020_task_state.py  check_slice_binding.py  live_eval.py  run_slice_workflow.py  verify_hermes_v2_packet.py
specs/: README.md
tests/: hook_sandbox.py  provider_helpers.py  test_003_runner.py  test_adapter_channel.py  test_causal_permit.py  test_classifiers.py  test_claude_code_hook.py  test_claude_code_hook_wrapper.py  test_claude_code_prompt_gate.py  test_cli.py  test_codex_config_app.py  test_codex_plugin_bundle.py  test_codex_prompt_gate.py  test_codex_room_runner.py  test_codex_runtime_state.py  test_codex_send_gate.py  test_codex_smoke_evidence.py  test_core.py  test_dashboard_asset_safety.py  test_defer.py  test_discord_adapter.py  test_docs_truthfulness.py  test_fastpath.py  test_governance.py  test_hermes_integration.py  test_hermes_nunchi_gate_quiet_chatter.py  test_hermes_state.py  test_history_buffer.py  test_install.py  test_integration_entrypoints.py  test_matrix_adapter.py  test_mcp_discord_gateway.py  test_mcp_discord_server.py  test_no_home_writes.py  test_no_second_judgment.py  test_pass_corroboration.py  test_provider_classifier.py  test_provider_redirection.py  test_schema.py  test_send_backstop.py  (+5 more)
(+568 files in other folders)
