[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nunchi"
version = "0.2.0"
description = "Read-the-room admission gate for agents on shared chat surfaces: should this agent speak now?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [
  { name = "Nunchi contributors" }
]
dependencies = []
keywords = [
  "nunchi",
  "agents",
  "llm",
  "admission-gate",
  "turn-taking",
  "read-the-room",
  "moderation",
  "openrouter",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
discord = ["discord.py>=2.4"]
mcp-discord = ["mcp>=1.9,<2"]

[project.urls]
Homepage = "https://github.com/mentatzoe/nunchi"
Repository = "https://github.com/mentatzoe/nunchi"
Issues = "https://github.com/mentatzoe/nunchi/issues"

[project.scripts]
nunchi = "nunchi.cli:main"
nunchi-install = "nunchi.install:main"
nunchi-channel = "nunchi.adapters.channel_v2:main"
nunchi-matrix = "nunchi.adapters.matrix_v2:main"
nunchi-telegram = "nunchi.adapters.telegram_v2:main"
nunchi-discord = "nunchi.adapters.discord_v2:main"
nunchi-mcp-discord = "nunchi.mcp_discord.server:main"
nunchi-codex-room-v2 = "nunchi.integrations.codex_room_v2:main"
nunchi-codex-config-app = "nunchi.integrations.codex_config_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nunchi.integrations" = ["*.html", "*.json"]
